# bricklib

./: .gitattributes  .gitignore  .markdownlint.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  README.old.md  bitset-greedy.cpp  bitset.cpp  brickConfig.cmake.in  zmorttest.cpp
cmake/: VecScatter.cmake
codegen/: README.md  setup.py  vecscatter
codegen/st/: __init__.py  alop.py  expr.py  expr_meta.py  func.py  grid.py
codegen/st/codegen/: base.py  buffer.py  dag_opt.py  printer.py  reduction.py
codegen/st/codegen/backend/: __init__.py  asimd.py  avx2.py  avx512.py  base.py  cuda.py  flex.py  scalar.py  sse.py
docs/: Doxyfile.in  MMAP.md  MPI-CUDA.md  MPI-Scaling-Cori.md  MPI-Scaling-Summit.md  doxygen_html_style.css  install.md  integration.md  mainpage.md  papers.bib  stencilExpr.md  testcases.md  usingbricks.md  vectorization.md
include/: array-mpi.h  bitset.h  brick-cuda.h  brick-dpc.h  brick-gpu.h  brick-hip.h  brick-hip.hip.hpp  brick-mpi.h  brick-opencl.h  brick-sycl.h  brick.h  brickcompare.h  bricksetup.h  cmpconst.h  dev_shl.h  memfd.h  minimal_brick.h  multiarray.h  vecscatter.h  zmort.h
scripts/summit/: 8nodes.sh  modules.sh  strong.sh
scripts/theta/: 8nodes.sh  modules.sh  strong.sh
single/: CMakeLists.txt  cpu.cpp  cuda.cpp  dpc.cpp  hip.cpp  mpi.cpp  opencl.cpp  sycl.cpp
spack/: package.py
src/: CMakeLists.txt  array-mpi.cpp  brick-mpi.cpp  memfd.cpp  multiarray.cpp  zmort.cpp
stencils/: 3axis-out.hip.cpp  3axis.cpp  3axis.cu  3axis.hip.cpp  3axis_cl.cpp  3axis_cl_krnl.c  3axis_dpc.cpp  3axis_sycl.cpp  brickcompare.cpp  brickcompare.h  cmpconst.h  cond.py  copy.cpp  cpuvfold.h  cudaarray.h  cudavfold.h  dpcvfold.h  fake.h  gpuarray.h  gpuvfold.h  hipvfold.h  mpi125pt.py  mpi13pt.py  mpi25pt.py  mpi7pt.py  mpi9pt.py  multiarray.cpp  multiarray.h  stencils.h  stencils.hip.h  stencils_cu.h  stencils_dpc.h  stencils_hip.h  stencils_hip.hip.h
strong/: CMakeLists.txt  args.cpp  args.h  main.cpp  main.cu  mmap.cu
weak/: CMakeLists.txt  args.cpp  args.h  main-4d.cpp  main.cpp  main.cu  main.hip.cpp  mmap.cu  mmap.hip.cpp  onesided.cpp  shmem.cpp
